tests/harness/errors/158_self_assign_direct.eu
# Trivial self-assignment: x: x always diverges.
out: { x: x }
